--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "ember-cli-sri": "^2.1.0",
     "ember-cli-test-loader": "^1.1.0",
     "ember-cli-uglify": "^1.2.0",
+    "ember-cli-update": "0.7.1",
     "ember-code-snippet": "^1.8.1",
     "ember-data": "^2.10.0",
     "ember-disable-prototype-extensions": "^1.1.0",
